fix mockito warning